add @media queries to the services components
Wrapped services categories in a container and
added flex-box. Added a font color white class.

--- a/services.html
+++ b/services.html
@@ -16,17 +16,19 @@
   <body>
 
     <!-- JUST REMOVE THE SECTION CLASS, IT'S FOR THE ORANGE COLOR -->
-    <section class="services-category">
-      <h3 class="services-header" data-title="ux-design">UI &amp; UX DESIGN</h3>
-      <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-    </section>
-    <section class="services-category">
-      <h3 class="services-header" data-title="laboratory">LABORATORY</h3>
-      <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-    </section>
-    <section class="services-category">
-      <h3 class="services-header" data-title="development">DEVELOPMENT</h3>
-      <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-    </section>
+    <div class="services-category-container">
+      <section class="services-category">
+        <h3 class="services-header header-white" data-title="ux-design">UI &amp; UX DESIGN</h3>
+        <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
+      </section>
+      <section class="services-category">
+        <h3 class="services-header header-white" data-title="laboratory">LABORATORY</h3>
+        <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
+      </section>
+      <section class="services-category">
+        <h3 class="services-header header-white" data-title="development">DEVELOPMENT</h3>
+        <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
+      </section>
+    </div>
   </body>
 </html>
