add services text and section header background

--- a/basic-pricing.html
+++ b/basic-pricing.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <section class="pricing">
-      <h3 class="sub-section-header"><span class="horizontal-rule">PRICING TABLES</span></h3>
+      <h3 class="section-header"><span class="horizontal-rule">PRICING TABLES</span></h3>
       <section class="pricing-tables">
-        <h4 class="pricing-header header-white">BASIC</h4>
+        <h4 class="pricing-header white-color">BASIC</h4>
         <ul>
           <li class="pricing-plan"><span class="pricing-cost">$5.99</span> /MONTH</li>
           <li class="pricing-stats">3 Projects</li>
@@ -30,7 +30,7 @@
         </div>
       </section>
       <section class="pricing-tables">
-        <h4 class="pricing-header header-white">STANDARD</h4>
+        <h4 class="pricing-header white-color">STANDARD</h4>
         <ul>
           <li class="pricing-plan"><span class="pricing-cost">$10.99</span> /MONTH</li>
           <li class="pricing-stats">7 Projects</li>
@@ -43,7 +43,7 @@
         </div>
       </section>
       <section class="pricing-tables">
-        <h4 class="pricing-header header-white">PROFESSIONAL</h4>
+        <h4 class="pricing-header white-color">PROFESSIONAL</h4>
         <ul>
           <li class="pricing-plan"><span class="pricing-cost">$25.99</span> /MONTH</li>
           <li class="pricing-stats">15 Projects</li>
@@ -56,7 +56,7 @@
         </div>
       </section>
       <section class="pricing-tables">
-        <h4 class="pricing-header header-white">PREMIUM</h4>
+        <h4 class="pricing-header white-color">PREMIUM</h4>
         <ul>
           <li class="pricing-plan"><span class="pricing-cost">$49.99</span> /MONTH</li>
           <li class="pricing-stats">UNLIMITED Projects</li>
