--- a/services.html
+++ b/services.html
@@ -13,22 +13,27 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-
-    <!-- JUST REMOVE THE SECTION CLASS, IT'S FOR THE ORANGE COLOR -->
-    <div class="services-category-container">
-      <section class="services-category">
-        <h3 class="services-header header-white" data-title="ux-design">UI &amp; UX DESIGN</h3>
-        <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-      </section>
-      <section class="services-category">
-        <h3 class="services-header header-white" data-title="laboratory">LABORATORY</h3>
-        <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-      </section>
-      <section class="services-category">
-        <h3 class="services-header header-white" data-title="development">DEVELOPMENT</h3>
-        <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-      </section>
-    </div>
+  <body style="background-color: #fd6632;">
+    <article class="services-container">
+      <h2 class="section-header white-color">SERVICES</h2>
+      <p class="services-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+      <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <!-- JUST REMOVE THE SECTION CLASS, IT'S FOR THE ORANGE COLOR -->
+      <div class="services-category-container">
+        <section class="services-category">
+          <h3 class="services-header white-color" data-title="ux-design">UI &amp; UX DESIGN</h3>
+          <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
+        </section>
+        <section class="services-category">
+          <h3 class="services-header white-color" data-title="laboratory">LABORATORY</h3>
+          <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
+        </section>
+        <section class="services-category">
+          <h3 class="services-header white-color" data-title="development">DEVELOPMENT</h3>
+          <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
+        </section>
+      </div>
+    </article>
   </body>
 </html>
