add portfolio section slider for mobile
updated font package to include a down arrow; added a portfolio.html component

--- a/index.html
+++ b/index.html
@@ -27,88 +27,90 @@
       <h1>Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong>awesome</strong> mobile and websites</h1>
     </header>
     <main>
-      <article>
-        <h2>SERVICES</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <section>
-          <h3>UI &amp; UX DESIGN</h3>
-          <img src="" alt="Icon of paintbrush" title="Paintbrush">
-          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-        </section>
-        <section>
-          <h3>LABORATORY</h3>
-          <img src="" alt="Icon of flask" title="Flask">
-          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-        </section>
-        <section>
-          <h3>DEVELOPMENT</h3>
-          <img src="" alt="Icon of gear" title="Gear">
-          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-        </section>
-        <section>
-          <h3>PRICING TABLES</h3>
-          <section>
-            <h4>BASIC</h4>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-            <button></button>
+      <article class="services-container">
+        <h2 class="section-header white-color">SERVICES</h2>
+        <p class="services-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+        <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <div class="services-category-container">
+          <section class="services-category">
+            <h3 class="services-header white-color" data-title="ux-design">UI &amp; UX DESIGN</h3>
+            <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
           </section>
-          <section>
-            <h4>STANDARD</h4>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-            <button></button>
+          <section class="services-category">
+            <h3 class="services-header white-color" data-title="laboratory">LABORATORY</h3>
+            <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
           </section>
-          <section>
-            <h4>PROFESSIONAL</h4>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-            <button></button>
+          <section class="services-category">
+            <h3 class="services-header white-color" data-title="development">DEVELOPMENT</h3>
+            <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
           </section>
-          <section>
-            <h4>PREMIUM</h4>
+        </div>
+        <section class="pricing">
+          <h3 class="sub-section-header white-color">PRICING TABLES</h3>
+          <section class="pricing-tables">
+            <h4 class="pricing-header white-color">BASIC</h4>
             <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li class="pricing-plan"><span class="pricing-cost">$5.99</span> /MONTH</li>
+              <li class="pricing-stats">3 Projects</li>
+              <li class="pricing-stats">2 Users</li>
+              <li class="pricing-stats">1 Gb</li>
+              <li class="pricing-stats">1 Calendar</li>
             </ul>
-            <button></button>
+            <div class="pricing-button-container">
+              <a href=""><button class="pricing-button">SIGN UP</button></a>
+            </div>
+          </section>
+          <section class="pricing-tables">
+            <h4 class="pricing-header white-color">STANDARD</h4>
+            <ul>
+              <li class="pricing-plan"><span class="pricing-cost">$10.99</span> /MONTH</li>
+              <li class="pricing-stats">7 Projects</li>
+              <li class="pricing-stats">5 Users</li>
+              <li class="pricing-stats">10 Gb User</li>
+              <li class="pricing-stats">5 Calendar</li>
+            </ul>
+            <div class="pricing-button-container">
+              <a href=""><button class="pricing-button">SIGN UP</button></a>
+            </div>
+          </section>
+          <section class="pricing-tables">
+            <h4 class="pricing-header white-color">PROFESSIONAL</h4>
+            <ul>
+              <li class="pricing-plan"><span class="pricing-cost">$25.99</span> /MONTH</li>
+              <li class="pricing-stats">15 Projects</li>
+              <li class="pricing-stats">50 Users</li>
+              <li class="pricing-stats">100 Gb User</li>
+              <li class="pricing-stats">25 Calendar</li>
+            </ul>
+            <div class="pricing-button-container">
+              <a href=""><button class="pricing-button">SIGN UP</button></a>
+            </div>
+          </section>
+          <section class="pricing-tables">
+            <h4 class="pricing-header white-color">PREMIUM</h4>
+            <ul>
+              <li class="pricing-plan"><span class="pricing-cost">$49.99</span> /MONTH</li>
+              <li class="pricing-stats">UNLIMITED Projects</li>
+              <li class="pricing-stats">UNLIMITED Users</li>
+              <li class="pricing-stats">1000 Gb User</li>
+              <li class="pricing-stats">UNLIMITED Calendar</li>
+            </ul>
+            <div class="pricing-button-container">
+              <a href=""><button class="pricing-button">SIGN UP</button></a>
+            </div>
           </section>
         </section>
       </article>
       <article>
         <h2>PORTFOLIO</h2>
-<!--         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li>
+          <div class="portfolio-slider">
             <figure>
               <img src="" alt="Hand holding an iPhone" title="Crispers/Clouders app">
             </figure>
-            <input type="radio" name="slider button" value="four" checked="checked">
-          </li>
-          <li></li>
-        </ul> -->
+
+          </div>
+
         <section>
           <h3><a href="">All works</a></h3>
           <ul>
