add slider bullets and a category buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,15 @@
         </ul>
       </div>
 
-
       <section class="portfolio-section">
+        <h3 class="portfolio-section-header"><a class="portfolio-selected-category" href="">All works</a></h3>
+        <ul title="portfolio-categories" aria-hidden="true">
+          <li class="portfolio-menu"><a href="">Webdesign</a></li>
+          <li class="portfolio-menu"><a href="">UI design</a></li>
+          <li class="portfolio-menu"><a href="">Icon design</a></li>
+          <li class="portfolio-menu"><a href="">Brand &amp; Logotypes</a></li>
+        </ul>
+
         <figure class="portfolio-item">
           <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
           <figcaption>
