Finalize the Team section layout for mobile and desktop views

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <article class="services-container">
-        <h2 class="section-header white-color">SERVICES</h2>
+        <h2 class="section-header white-color white-line">SERVICES</h2>
         <p class="services-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -47,7 +47,7 @@
           </section>
         </div>
         <section class="pricing">
-          <h3 class="sub-section-header white-color">PRICING TABLES</h3>
+          <h3 class="sub-section-header white-color white-line">PRICING TABLES</h3>
           <section class="pricing-tables">
             <h4 class="pricing-header white-color">BASIC</h4>
             <ul>
@@ -245,7 +245,7 @@
         </aside>
       </article>
       <article class="team">
-        <h2>TEAM</h2>
+        <h2 class="team-section-header gray-line">TEAM</h2>
         <p class="team-text team-description-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <section class="team-profile">
           <h3 class="team-header profile-header">JONATHAN DOE</h3>
@@ -308,9 +308,9 @@
           </figure>
         </section>
         <section class="clients">
-          <h3 class="client-section-header">CLIENTS</h3>
+          <h3 class="client-section-header gray-line">CLIENTS</h3>
           <button class="icon-chevron-left client-button circle"></button>
-          <ul class="client-profile">
+          <ul>
             <li>
               <figure class="client-figure">
                 <img src="img/broderic.jpg" alt="Image of Matthew Broderic" title="Matthew Broderic" class="client-image circle">
