--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
   </head>
   <body>
       <article class="team">
-        <h2>TEAM</h2>
+        <h2 class="team-section-header gray-line">TEAM</h2>
         <p class="team-text team-description-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <section class="team-profile">
           <h3 class="team-header profile-header">JONATHAN DOE</h3>
@@ -78,9 +78,9 @@
           </figure>
         </section>
         <section class="clients">
-          <h3 class="client-section-header">CLIENTS</h3>
+          <h3 class="client-section-header gray-line">CLIENTS</h3>
           <button class="icon-chevron-left client-button circle"></button>
-          <ul class="client-profile">
+          <ul>
             <li>
               <figure class="client-figure">
                 <img src="img/broderic.jpg" alt="Image of Matthew Broderic" title="Matthew Broderic" class="client-image circle">
