--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
     <article class="portfolio-container">
       <h2>PORTFOLIO</h2>
+
       <div class="portfolio-slider">
         <figure class="portfolio-slider-figure">
           <img class="portfolio-slider-overlay" src="img/slider.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Clouders app">
@@ -35,101 +37,90 @@
         </ul>
       </div>
 
-      <section class="portfolio-section">
-        <h3 class="portfolio-section-header"><a class="portfolio-selected-category" href="">All works</a></h3>
-        <ul title="portfolio-categories" aria-hidden="true">
-          <li class="portfolio-menu"><a href="">Webdesign</a></li>
-          <li class="portfolio-menu"><a href="">UI design</a></li>
-          <li class="portfolio-menu"><a href="">Icon design</a></li>
-          <li class="portfolio-menu"><a href="">Brand &amp; Logotypes</a></li>
+      <!-- <section class="portfolio-section"> -->
+        <!-- <h3 class="portfolio-section-header"><a class="portfolio-selected-category" href="">All works</a></h3> -->
+      <nav title="portfolio navigation">
+        <ul title="portfolio-categories">
+          <li><a class="portfolio-menu-item portfolio-selected-category" href="">All works</a></li>
+          <li><a class="portfolio-menu-item" href="">Webdesign</a></li>
+          <li><a class="portfolio-menu-item" href="">UI design</a></li>
+          <li><a class="portfolio-menu-item" href="">Icon design</a></li>
+          <li><a class="portfolio-menu-item" href="">Brand &amp; Logotypes</a></li>
         </ul>
+      </nav>
 
-        <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
-          <figcaption>
-            <h4 class="portfolio-caption-header">Youtube app</h4>
-            <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
-          </figcaption>
-        </figure>
+      <figure class="portfolio-item">
+        <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
+        <figcaption>
+          <h4 class="portfolio-caption-header">Youtube app</h4>
+          <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
+        </figcaption>
+      </figure>
 
-        <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/hexagon.jpg" alt="Image of Avengers welcome screen" title="Avengers welcome screen"></a>
-          <figcaption>
-            <h4 class="portfolio-caption-header">Hexagon onepage</h4>
-            <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
-          </figcaption>
-        </figure>
+      <figure class="portfolio-item">
+        <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/hexagon.jpg" alt="Image of Avengers welcome screen" title="Avengers welcome screen"></a>
+        <figcaption>
+          <h4 class="portfolio-caption-header">Hexagon onepage</h4>
+          <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
+        </figcaption>
+      </figure>
 
+      <figure class="portfolio-item">
+        <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/sketches.jpg" alt="Image of drawing tools and sketches of fantasy characters" title="Fantasy character sketches"></a>
+        <figcaption>
+          <h4 class="portfolio-caption-header">Sketches icon</h4>
+          <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
+        </figcaption>
+      </figure>
 
-        <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/sketches.jpg" alt="Image of drawing tools and sketches of fantasy characters" title="Fantasy character sketches"></a>
-          <figcaption>
-            <h4 class="portfolio-caption-header">Sketches icon</h4>
-            <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
-          </figcaption>
-        </figure>
+      <figure class="portfolio-item">
+        <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/logotypes.jpg" alt="Image of logotypes on screen" title="Logotypes"></a>
+        <figcaption>
+          <h4 class="portfolio-caption-header">Logotypes volume</h4>
+          <p class="portfolio-category">UI design, brand &amp; logotypes</p>
+        </figcaption>
+      </figure>
 
+      <figure class="portfolio-item">
+        <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/flight.jpg" alt="Image of app screen with points displayed" title="Points screen"></a>
+        <figcaption>
+          <h4 class="portfolio-caption-header">Flight control</h4>
+          <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
+        </figcaption>
+      </figure>
 
-        <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/logotypes.jpg" alt="Image of logotypes on screen" title="Logotypes"></a>
-          <figcaption>
-            <h4 class="portfolio-caption-header">Logotypes volume</h4>
-            <p class="portfolio-category">UI design, brand &amp; logotypes</p>
-          </figcaption>
-        </figure>
+      <figure class="portfolio-item">
+        <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
+        <figcaption>
+          <h4 class="portfolio-caption-header">Youtube app</h4>
+          <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
+        </figcaption>
+      </figure>
 
+      <figure class="portfolio-item">
+        <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/management.jpg" alt="Image of app screen for claim management" title="Claim management screen"></a>
+        <figcaption>
+          <h4 class="portfolio-caption-header">Management</h4>
+          <p class="portfolio-category">UI design, brand &amp; logotypes</p>
+        </figcaption>
+      </figure>
 
-        <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/flight.jpg" alt="Image of app screen with points displayed" title="Points screen"></a>
-          <figcaption>
-            <h4 class="portfolio-caption-header">Flight control</h4>
-            <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
-          </figcaption>
-        </figure>
+      <figure class="portfolio-item">
+        <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/korean.jpg" alt="Image of recipe app screen for korean bulgogi beef" title="Korean beef recipe screen"></a>
+        <figcaption>
+          <h4 class="portfolio-caption-header">Korean beef</h4>
+          <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
+        </figcaption>
+      </figure>
 
-
-        <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
-          <figcaption>
-            <h4 class="portfolio-caption-header">Youtube app</h4>
-            <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
-          </figcaption>
-        </figure>
-
-
-        <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/management.jpg" alt="Image of app screen for claim management" title="Claim management screen"></a>
-          <figcaption>
-            <h4 class="portfolio-caption-header">Management</h4>
-            <p class="portfolio-category">UI design, brand &amp; logotypes</p>
-          </figcaption>
-        </figure>
-
-
-        <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/korean.jpg" alt="Image of recipe app screen for korean bulgogi beef" title="Korean beef recipe screen"></a>
-          <figcaption>
-            <h4 class="portfolio-caption-header">Korean beef</h4>
-            <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
-          </figcaption>
-        </figure>
-
-
-        <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/facebook-thumb.jpg" alt="Image of Facebook like and dislike thumb icons" title="Facebook thumbs"></a>
-          <figcaption>
-            <h4 class="portfolio-caption-header">Facebook thumbs</h4>
-            <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
-          </figcaption>
-        </figure>
-      </section>
-      <!-- <ul class="portfolio-slider-dots" aria-hidden="true">
-        <li class="slider-dot">.</li>
-        <li class="slider-dot"></li>
-        <li class="slider-dot"></li>
-        <li class="slider-dot"></li>
-        <li class="slider-dot"></li>
-      </ul> -->
+      <figure class="portfolio-item">
+        <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/facebook-thumb.jpg" alt="Image of Facebook like and dislike thumb icons" title="Facebook thumbs"></a>
+        <figcaption>
+          <h4 class="portfolio-caption-header">Facebook thumbs</h4>
+          <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
+        </figcaption>
+      </figure>
+      <!-- </section> -->
 
     </article>
   </body>
