--- a/contact.html
+++ b/contact.html
@@ -17,18 +17,18 @@
     <article style="background-color: #fd6632">
       <h2>CONTACT</h2>
       <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
-      <form>
+      <form class="contact-form">
         <input type="text" name="company-name" placeholder="Company name">
         <input type="email" name="company-email" placeholder="Your@mail.com">
         <textarea name="company-message" rows="10" cols="50">Message...</textarea>
         <input type="submit" name="submit-button" value="SEND MESSAGE">
       </form>
-      <figure>
-        <img src="" alt="Map of San Francisco location" title="San Francisco location">
-        <figcaption>
-          <a href="">+970 897 580<span>(7:00 - 20:00)</span></a>
-          <a href="">info@company.com</a>
-          <a href="">USA, <span>San Francisco, 57010, Little Parry St. 826/31</span></a>
+      <figure class="contact-map">
+        <img src="img/map-mobile.jpg" alt="Map of San Francisco location" title="San Francisco location">
+        <figcaption class="contact-map-caption">
+          <a class="contact-phone icon-phone" href="">+970 897 580<span>(7:00 - 20:00)</span></a>
+          <a class="contact-email icon-envelope" href="">info@company.com</a>
+          <a class="contact-location icon-pin" href="">USA, <span>San Francisco, 57010, Little Parry St. 826/31</span></a>
         </figcaption>
       </figure>
     </article>
